<resources>
    <string name="app_name">My Application</string>
    <string name="dish_for">DishFor</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First name*</string>
    <string name="last_name">Last name*</string>
    <string name="email_address">Email address*</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="sign_up">Sign Up!</string>
    <string name="have_an_account">Have an account?</string>
    <string name="not_have_an_account">Don’t have an account yet?</string>
    <string name="forgot_password">forgot your password?</string>
    <string name="edit_user">Edit User</string>
    <string name="avatar">avatar</string>
    <string name="plus">+</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Password</string>
    <string name="tags">Tags:</string>
    <string name="email_colon">Email:</string>
    <string name="background">Background:</string>
    <string name="delicious_pesto_spaghetti_no_cheese">Delicious pesto spaghetti - no cheese!</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="food">food</string>
    <string name="bin">bin</string>
    <string name="button">Button</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="feed">Feed</string>
    <string name="search_something">search something</string>
    <string name="comments">Comments</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="view_recipe">View Recipe</string>
    <string name="logout">logout</string>
</resources>