<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="92dp"
        android:text="@string/dish_for"
        android:textColor="@color/title"
        android:textSize="64sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/FeedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#C813971A"
        android:insetLeft="32dp"
        android:insetRight="32dp"
        android:insetBottom="24dp"
        android:shadowColor="#000000"
        android:shadowDx="8"
        android:shadowDy="4"
        android:shadowRadius="1.6"
        android:text="@string/feed"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#C813971A"
        android:insetLeft="32dp"
        android:insetRight="32dp"
        android:insetBottom="24dp"
        android:shadowColor="#000000"
        android:shadowDx="8"
        android:shadowDy="4"
        android:shadowRadius="1.6"
        android:text="@string/login"
        android:textSize="24sp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#C813971A"
        android:insetLeft="32dp"
        android:insetRight="32dp"
        android:insetBottom="24dp"
        android:shadowColor="#000000"
        android:shadowDx="8"
        android:shadowDy="4"
        android:shadowRadius="1.6"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/editUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#C813971A"
        android:insetLeft="32dp"
        android:insetRight="32dp"
        android:insetBottom="24dp"
        android:shadowColor="#000000"
        android:shadowDx="8"
        android:shadowDy="4"
        android:shadowRadius="1.6"
        android:text="@string/edit_user"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/viewRecipeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#C813971A"
        android:insetLeft="32dp"
        android:insetRight="32dp"
        android:insetBottom="24dp"
        android:shadowColor="#000000"
        android:shadowDx="8"
        android:shadowDy="4"
        android:shadowRadius="1.6"
        android:text="@string/view_recipe"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/createRecipeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#C813971A"
        android:insetLeft="32dp"
        android:insetRight="32dp"
        android:shadowColor="#000000"
        android:shadowDx="8"
        android:shadowDy="4"
        android:shadowRadius="1.6"
        android:text="@string/create_recipe"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>