<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="32dp"
    android:paddingTop="36dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appTitleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:minHeight="48dp"
            android:text="@string/dish_for"
            android:textColor="@color/title"
            android:textSize="64sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:minHeight="48dp"
            android:shadowColor="#000000"
            android:shadowDx="8"
            android:shadowDy="4"
            android:shadowRadius="1.6"
            android:text="@string/register"
            android:textColor="@color/green"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstNameRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/text_fields"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <Space
                android:layout_width="36dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/lastNameRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/text_fields"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:background="@drawable/text_fields"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:background="@drawable/text_fields"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirmPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:background="@drawable/text_fields"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpButtonRegister"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/green"
            android:minHeight="48dp"
            android:shadowColor="#000000"
            android:shadowDx="8"
            android:shadowDy="2"
            android:shadowRadius="1.6"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:minHeight="48dp"
            android:text="@string/have_an_account"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>
