<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="32dp"
    android:paddingTop="36dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appTitleEditUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:minHeight="48dp"
            android:text="@string/dish_for"
            android:textColor="@color/title"
            android:textSize="64sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/image_platform"
            android:contentDescription="@string/avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar" />

        <!-- שדות שם פרטי, שם משפחה וסיסמה -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/firstNameEditUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/cream" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/lastNameEditUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/cream" />

        </LinearLayout>

        <!-- תגיות -->

        <!--        <TextView-->
<!--            android:id="@+id/forgotPassword"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:minHeight="16dp"-->
<!--            android:text="@string/reset_password"-->
<!--            android:textColor="@color/black" />-->

        <Button
            android:id="@+id/saveUserChanges"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:minHeight="48dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red"
            android:minHeight="48dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>
